[package]
name = "lib_dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
strip = true
codegen-units = 1

[dependencies]
goblin = "0.8.0"